[package]
name = "font"
description = "This is a simple deno module for font rasterization and layout"
repository = "https://github.com/denosaurs/font"
license = "MIT"
version = "0.1.0"
authors = ["Elias Sjögreen"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2.70", features = ["serde-serialize"] }
wee_alloc = { version = "0.4.5", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
lazy_static = "1.4.0"
fontdue = "0.4.0"

[profile.release]
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]

[features]
default = ["wee_alloc"]
